fix(audit): more contrast for primary color

--- a/src/customBootstrap.scss
+++ b/src/customBootstrap.scss
@@ -1,3 +1,7 @@
+$theme-colors: (
+  "primary": #0071EB,
+);
+
 @import "node_modules/bootstrap/scss/functions";
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
